--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -3,4 +3,6 @@
   grid-template-rows: repeat(3, 200px);
   grid-template-columns: repeat(3, 200px);
   gap: 20px;
+  width: 640px;
+  margin: 0 auto;
 }
